[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Actors/Enemy/Orcs/OrcAnimations.tres" type="AnimationNodeBlendTree" id=1]
[ext_resource path="res://Scenes/Actors/Enemy/BasicEnemyAI.gd" type="Script" id=2]
[ext_resource path="res://Resources/Textures/Kinematic/Orcs/BigOrc.tres" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 18.3333 )

[sub_resource type="CircleShape2D" id=6]
radius = 901.274

[sub_resource type="CapsuleShape2D" id=7]
radius = 76.6476
height = 13.6362

[sub_resource type="Animation" id=15]
resource_name = "AttackLeft"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 6.9644, 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, -10.0, 0.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "AttackRight"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 6.9644, 0.5, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 10.0, 0.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -30 ), Vector2( 0, -37 ), Vector2( 0, -35 ), Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -37.4, -70.0, -90.0, -130.0 ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WallCollide:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.40979, 6.90308 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Stop"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WallCollide:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.40979, 6.90308 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -35 ), Vector2( 0, -37 ), Vector2( 0, -35 ), Vector2( 0, -32 ) ]
}

[node name="BigOrc" type="KinematicBody2D" groups=["enemy"]]
light_mask = 4
position = Vector2( -1.33484, 0 )
scale = Vector2( 0.333, 0.333 )
z_index = 1
collision_layer = 4
collision_mask = 23
script = ExtResource( 2 )
maxspeed = 200
acceleration = 10
mass = 20.0
attackdelay = 5.0
attackdamage = 40
maxhealth = 300
knockback = 10.0
knockbackslide = true
attackwindup = 2.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -30 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_rect = Rect2( 32, 160, 16, 16 )
region_filter_clip = true

[node name="WallCollide" type="CollisionShape2D" parent="."]
position = Vector2( -0.40979, 6.90308 )
shape = SubResource( 2 )

[node name="Node" type="Node" parent="."]

[node name="LineOfSight" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 66

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="PlayerCheck" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -32 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
shape = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerCheck"]
position = Vector2( 105, 68 )
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 5, -34, -91, 21, -187, 21, -323, 61, -323, -131, -187, -91, -91, -91 )

[node name="Area2D" type="Area2D" parent="PlayerCheck"]

[node name="AttackZone" type="CollisionShape2D" parent="PlayerCheck/Area2D"]
position = Vector2( -60, 0 )
shape = SubResource( 7 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, -32 )
z_index = 2
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 1 )
anim_player = NodePath("AnimationPlayer")
active = true
parameters/Attack/active = false
parameters/AttackAnim/blend_position = -1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationTree"]
root_node = NodePath("../..")
anims/AttackLeft = SubResource( 15 )
anims/AttackRight = SubResource( 16 )
anims/Die = SubResource( 17 )
anims/RESET = SubResource( 18 )
anims/Stop = SubResource( 19 )
anims/Walk = SubResource( 20 )

[connection signal="body_entered" from="PlayerCheck" to="." method="_on_PlayerCheck_body_entered"]
[connection signal="body_exited" from="PlayerCheck" to="." method="_on_PlayerCheck_body_exited"]
[connection signal="body_entered" from="PlayerCheck/Area2D" to="." method="_on_AttackAble_entered"]
[connection signal="body_exited" from="PlayerCheck/Area2D" to="." method="_on_AttackAble_exited"]
